--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="Untitled-2.css" />
-    <link rel="stylesheet" href="#9Slide03 Montserrat.ttf" />
+    <link rel="stylesheet" url="#9Slide03 Montserrat.ttf" />
     <title>Trần Thế Bảo</title>
   </head>
 
